2011-12-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gadgets.h src/set.c src/show.c src/graph3d.c src/graphics.c
	src/save.c docs/gnuplot.doc: Add an arrow specification syntax variant
	    "set arrow <tag> from <position> length <val> angle <angle>"
	that makes it easy to describe arrows of constant length, independent of
	terminal or graph aspect ratios and 3D view angle.

2011-12-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (draw_3d_graphbox): Rather than treating the position
	of the z-axis label as a fixed 3D [x,y,z], always draw it at a fixed
	distance to the left of the z axis.  This is a CHANGE in behavior.
	Bug #2879916

2011-11-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/qtterminal/QtGnuplotItems.cpp src/qtterminal/QtGnuplotItems.h
	src/qtterminal/QtGnuplotScene.cpp src/qtterminal/qt_term.cpp
	term/qt.trm configure.in:
	- Pointsize is a double, not an integer (fractional sizes were being
	  truncated to zero).
	- When a polygon is flushed, the final vertex must be kept as the
	  current position. Bug #3370540.
	- The default rendering ("native") is pathetically slow for polygons.
	  If the Qt version is >= 4.7 this can be changed using environmental
	  variable QT_GRAPHICSSYSTEM.  Otherwise we force it to "raster".

2011-11-29  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/Makefile.in:  Remove duplicate entry for qt in CORETERMS.

2011-11-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/scanner.c (legal_identifier) src/scanner.h src/stats.c fit.c:
	Make sure that the variable name produced by the "stats ... prefix"
	command is a legal identifier.
	Bug #3441395

	* src/set.c (set_autoscale_axis): Remove unjustifiably large macros.

	* docs/gnuplot.doc src/graph3d.c: Spelling, additional index keywords.

2011-11-26  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/config.nt config/config.mgw: Sync with config.h created by
	autoconf.

	* src/msvc/Makefile: More complete install target. Add new variables